[package]
name = "pallet-contracts"
version = "27.0.0"
authors.workspace = true
edition.workspace = true
build = "build.rs"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "FRAME pallet for WASM contracts"
readme = "README.md"
include = ["CHANGELOG.md", "README.md", "benchmarks/**", "build.rs", "src/**/*"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
paste = { version = "1.0", default-features = false }
bitflags = "1.3"
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
log = { workspace = true }
serde = { optional = true, features = ["derive"], workspace = true, default-features = true }
smallvec = { version = "1", default-features = false, features = [
	"const_generics",
] }
wasmi = { version = "0.31", default-features = false }
impl-trait-for-tuples = "0.2"

# Only used in benchmarking to generate contract code
wasm-instrument = { version = "0.4", optional = true, default-features = false }
rand = { version = "0.8", optional = true, default-features = false }
rand_pcg = { version = "0.3", optional = true }

# Substrate Dependencies
environmental = { version = "1.1.4", default-features = false }
frame-benchmarking = { workspace = true , default-features = false, optional = true }
frame-support = { workspace = true , default-features = false }
frame-system = { workspace = true , default-features = false }
pallet-balances = { workspace = true , default-features = false, optional = true }
pallet-contracts-uapi = { path = "uapi" }
pallet-contracts-proc-macro = { path = "proc-macro" }
sp-api = { workspace = true , default-features = false }
sp-core = { workspace = true , default-features = false }
sp-io = { workspace = true , default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true ,default-features = false }

xcm = { package = "staging-xcm", workspace = true, default-features = false }
xcm-builder = { package = "staging-xcm-builder", workspace = true,default-features = false }

[dev-dependencies]
array-bytes = "6.1"
assert_matches = "1"
env_logger = "0.11"
pretty_assertions = "1"
wat = "1"
pallet-contracts-fixtures = { path = "./fixtures" }

# Polkadot Dependencies
xcm-builder = { package = "staging-xcm-builder", workspace = true }

# Substrate Dependencies
pallet-balances = { workspace = true  }
pallet-timestamp = { workspace = true }
pallet-message-queue = { workspace = true  }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-utility = { workspace = true }
pallet-assets = { workspace = true }
pallet-proxy = { workspace = true }
sp-keystore = { workspace = true }
sp-tracing = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"environmental/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-balances?/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-proxy/std",
	"pallet-timestamp/std",
	"pallet-utility/std",
	"rand?/std",
	"scale-info/std",
	"serde",
	"sp-api/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-runtime/std",
	"sp-std/std",
	"wasm-instrument?/std",
	"wasmi/std",
	"xcm-builder/std",
	"xcm/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"rand",
	"rand_pcg",
	"sp-runtime/runtime-benchmarks",
	"wasm-instrument",
	"xcm-builder/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-utility/try-runtime",
	"sp-runtime/try-runtime",
]
