[package]
name = "pallet-esg"
version = "1.0.0"
description = "ESG score pallet"
authors = ["5irechain"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bs58 = { version = "0.4.0", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex-literal = "0.3.4"
log = { workspace = true }
serde = { version = "1", optional = true }
serde_json = {version = "1",default-features = false, features = ["alloc"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
fp-account = {workspace=true, default-features = false}
firechain-runtime-core-primitives = {workspace = true, default-features = false}

[dev-dependencies]
sp-runtime = { workspace = true, default-features = false}

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "firechain-runtime-core-primitives/std",
    "fp-account/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
    "bs58/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
