[package]
name = "pallet-evm-chain-id"
version = "1.0.0-dev"
license = "Apache-2.0"
edition = "2021"
description = "EVM chain id storage pallet."
 
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
# Substrate
frame-support = { version = "4.0.0-dev", path = "../../frame/support" , default-features = false }
frame-system = { version = "4.0.0-dev", path = "../../frame/system", default-features = false }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-support/std",
	"frame-system/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
