[package]
name = "pallet-im-online"
version = "4.0.0-dev"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "FRAME's I'm online pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive", "serde"] }
frame-benchmarking = { workspace = true, optional = true}
frame-support = { workspace = true}
frame-system = { workspace = true}
pallet-authorship = { workspace = true}
sp-application-crypto = { workspace = true, features = ["serde"] }
sp-core = { workspace = true, features = ["serde"] }
sp-io = { workspace = true}
sp-runtime = { workspace = true, features = ["serde"] }
sp-staking = { workspace = true, features = ["serde"] }
sp-std = { workspace = true}
frame-election-provider-support = { workspace = true }
pallet-esg = { workspace = true }
pallet-session = { workspace = true }

[dev-dependencies]
env_logger = "0.9"
sp-npos-elections = { workspace = true }
pallet-balances = { workspace = true }
pallet-staking = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-bags-list = { workspace = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-staking/std",
	"pallet-session/std",
	"scale-info/std",
	"pallet-timestamp/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
	"frame-election-provider-support/std",
	"pallet-esg/std"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-session/try-runtime",
	"sp-runtime/try-runtime",
]
