[package]
name = "pallet-reward"
version = "1.0.0"
authors.workspace = true
edition.workspace = true

[dependencies]
frame-support = { workspace = true, default-features = false }
pallet-staking = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
scale-info = { workspace = true, features = ["derive"] }
parity-scale-codec = { version = "3.6.1", default-features = false, features = [
  "derive",
] }
frame-benchmarking = { workspace = true, default-features = false }
frame-election-provider-support = { workspace = true, default-features = false }
log = "0.4.21"

[dev-dependencies]
pallet-timestamp = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-esg = { workspace = true, default-features = false }
pallet-im-online = { workspace = true, default-features = false }
pallet-offences = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-staking/std",
  "sp-std/std",
  "sp-runtime/std",
  "pallet-staking/std",
  "pallet-session/std",
  "pallet-balances/std",
  "frame-election-provider-support/std",
  "frame-support/std",
  "frame-system/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
