[package]
name = "pallet-reward"
version = "1.0.0"
authors.workspace = true
edition.workspace = true

[dependencies]
frame-support = { workspace = true }
pallet-staking = { workspace = true }
pallet-session = { workspace = true }
frame-system = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
parity-scale-codec = { version = "3.6.12", default-features = false, features = [
  "derive",
] }
frame-benchmarking = { workspace = true }
frame-election-provider-support = { workspace = true }
log = "0.4.21"

[dev-dependencies]
pallet-timestamp = { workspace = true}
pallet-session = { workspace = true}
sp-io = { workspace = true}
sp-core = { workspace = true}
pallet-balances = { workspace = true}
pallet-esg = { workspace = true}
pallet-im-online = { workspace = true}
pallet-offences = { workspace = true}
sp-state-machine = { workspace = true}

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-staking/std",
  "sp-std/std",
  "sp-runtime/std",
  "pallet-staking/std",
  "pallet-session/std",
  "pallet-balances/std",
  "frame-election-provider-support/std",
  "frame-support/std",
  "frame-system/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
