[package]
name = "pallet-session"
version = "4.0.0-dev"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "FRAME sessions pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
impl-trait-for-tuples = "0.2.2"
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive", "serde"] }
frame-support = { workspace = true}
frame-system = { workspace = true}
pallet-timestamp = { workspace = true}
sp-core = { workspace = true, features = ["serde"] }
sp-io = { workspace = true}
sp-runtime = { workspace = true, features = ["serde"] }
sp-session = { workspace = true}
sp-staking = { workspace = true, features = ["serde"] }
sp-std = { workspace = true}
sp-trie = { workspace = true, optional = true}
sp-state-machine = { workspace = true}
frame-election-provider-support = { workspace = true }

[features]
default = [ "historical", "std" ]
historical = [ "sp-trie" ]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-state-machine/std",
	"sp-std/std",
	"sp-trie/std",
	"frame-election-provider-support/std",
]
runtime-benchmarks = ["frame-election-provider-support/runtime-benchmarks"]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]
