[package]
name = "pallet-session"
version = "28.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "FRAME sessions pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
impl-trait-for-tuples = "0.2.2"
log = { workspace = true }
scale-info = { version = "2.11.1", default-features = false, features = ["derive", "serde"] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false, features = ["serde"] }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false, features = ["serde"] }
sp-session = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false, features = ["serde"] }
sp-std = { workspace = true, default-features = false }
frame-election-provider-support = { workspace = true }
sp-trie = { workspace = true, default-features = false, optional = true }
sp-state-machine = { workspace = true, default-features = false }

[features]
default = ["historical", "std"]
historical = ["sp-trie"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-staking/std",
	"sp-state-machine/std",
	"sp-std/std",
	"frame-election-provider-support/std",
	"sp-trie/std",
]
runtime-benchmarks = ["frame-election-provider-support/runtime-benchmarks"]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-timestamp/try-runtime",
	"sp-runtime/try-runtime",
]
